--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="type">Тип жилья</label>
           <select id="type" name="type">
-            <option value="bungalo">Бунгало</option>
-            <option value="flat" selected>Квартира</option>
+            <option value="bungalo" selected>Бунгало</option>
+            <option value="flat">Квартира</option>
             <option value="house">Дом</option>
             <option value="palace">Дворец</option>
           </select>
@@ -128,7 +128,7 @@
 
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
-          <input id="price" name="price" type="number" placeholder="1000" min="0" max="1000000" required>
+          <input id="price" name="price" type="number" placeholder="0" min="0" max="1000000" required>
         </fieldset>
 
         <fieldset class="ad-form__element ad-form__element--time">
@@ -158,10 +158,10 @@
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="capacity">Количество мест</label>
           <select id="capacity" name="capacity">
-            <option value="3">для 3 гостей</option>
-            <option value="2">для 2 гостей</option>
+            <option value="3" disabled>для 3 гостей</option>
+            <option value="2" disabled>для 2 гостей</option>
             <option value="1" selected>для 1 гостя</option>
-            <option value="0">не для гостей</option>
+            <option value="0" disabled>не для гостей</option>
           </select>
         </fieldset>
 
