add backend.load backend save

--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@
     <div class="success hidden">
       <p class="success__message">Ваше объявление<br>успешно размещено!</p>
     </div>
+    <div class="error hidden">
+      <p class="error__title">Ошибка!</p>
+      <p class="error__message"></p>
+    </div>
   </main>
 
   <footer class="footer container">
@@ -267,6 +271,7 @@
   </template>
   <script src="js/utils.js"></script>
   <script src="js/selectors.js"></script>
+  <script src="js/backend.js"></script>
   <script src="js/validation.js"></script>
   <script src="js/data.js"></script>
   <script src="js/create-ads.js"></script>
