--- a/index.html
+++ b/index.html
@@ -214,8 +214,9 @@
       <p class="success__message">Ваше объявление<br>успешно размещено!</p>
     </div>
     <div class="error hidden">
-      <p class="error__title">Ошибка!</p>
-      <p class="error__message"></p>
+      <p class="error__message">Ошибка!
+      <span></span>
+      </p>
     </div>
   </main>
 
