--- a/index.html
+++ b/index.html
@@ -273,8 +273,9 @@
   <script src="js/utils.js"></script>
   <script src="js/selectors.js"></script>
   <script src="js/backend.js"></script>
-  <script src="js/validation.js"></script>
   <script src="js/create-ads.js"></script>
+  <script src="js/filter.js"></script>
+  <script src="js/validation.js"></script>
   <script src="js/map.js"></script>
 </body>
 </html>
