--- a/index.html
+++ b/index.html
@@ -278,5 +278,6 @@
   <script src="js/filter.js"></script>
   <script src="js/validation.js"></script>
   <script src="js/map.js"></script>
+  <script src="js/preview.js"></script>
 </body>
 </html>
