--- a/index.html
+++ b/index.html
@@ -107,12 +107,13 @@
 
         <fieldset class="ad-form__element ad-form__element--wide">
           <label class="ad-form__label" for="title">Заголовок объявления</label>
-          <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка в центре Токио">
+          <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка в центре Токио"
+                 minlength="30" maxlength="100" required>
         </fieldset>
 
         <fieldset class="ad-form__element ad-form__element--wide">
           <label class="ad-form__label" for="address">Адрес</label>
-          <input id="address" name="address" type="text">
+          <input id="address" name="address" type="text" readonly>
         </fieldset>
 
         <fieldset class="ad-form__element">
@@ -127,7 +128,7 @@
 
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
-          <input id="price" name="price" type="number" placeholder="5000">
+          <input id="price" name="price" type="number" placeholder="5000" max="1000000" required>
         </fieldset>
 
         <fieldset class="ad-form__element ad-form__element--time">
@@ -265,6 +266,11 @@
     <button type="button" class="map__pin" style="left: 200px; top: 400px;"><img src="img/avatars/user07.png" width="40" height="40" draggable="false" alt="Метка объявления"></button>
   </template>
 
+  <script src="js/data.js"></script>
+  <script src="js/selectors.js"></script>
+  <script src="js/service.js"></script>
+  <script src="js/ads-create.js"></script>
+  <script src="js/validation.js"></script>
   <script src="js/map.js"></script>
 </body>
 </html>
