Фильтры для объявлений

--- a/index.html
+++ b/index.html
@@ -213,6 +213,11 @@
     <div class="success hidden">
       <p class="success__message">Ваше объявление<br>успешно размещено!</p>
     </div>
+    <div class="error hidden">
+      <p class="error__message">Ошибка!
+        <span></span>
+      </p>
+    </div>
   </main>
 
   <footer class="footer container">
@@ -266,11 +271,17 @@
     <button type="button" class="map__pin" style="left: 200px; top: 400px;"><img src="img/avatars/user07.png" width="40" height="40" draggable="false" alt="Метка объявления"></button>
   </template>
 
-  <script src="js/data.js"></script>
+
+  <script src="js/backend.js"></script>
   <script src="js/selectors.js"></script>
   <script src="js/service.js"></script>
-  <script src="js/ads-create.js"></script>
-  <script src="js/validation.js"></script>
+  <script src="js/render.js"></script>
+  <script src="js/advertisement.js"></script>
   <script src="js/map.js"></script>
+  <script src="js/validation.js"></script>
+  <script src="js/debounce.js"></script>
+  <script src="js/filters.js"></script>
+
+
 </body>
 </html>
