--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           <label class="ad-form__label">Фотографии жилья</label>
           <div class="ad-form__photo-container">
             <div class="ad-form__upload">
-              <input type="file" id="images" name="images" class="ad-form__input visually-hidden">
+              <input type="file" id="images" name="images" class="ad-form__input visually-hidden" multiple>
               <label for="images" class="ad-form__drop-zone">Загрузите или&nbsp;перетащите сюда фото</label>
             </div>
             <div class="ad-form__photo"></div>
@@ -281,6 +281,7 @@
   <script src="js/validation.js"></script>
   <script src="js/debounce.js"></script>
   <script src="js/filters.js"></script>
+  <script src ="js/ad_photos.js"></script>
 
 
 </body>
